[package]
name = "turtly-converter"
version = "0.1.0"
edition = "2021"
authors = ["Satoshi Tanaka <overthere555@gmail.com>"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
nalgebra = "0.32.3"
nom = "7.1.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
stl_io = "0.7.0"
